pkg/lang/testdata/ub/calls/valid/optional-no-default.ub
inputs: { a: { type: optional(integer) } }
