pkg/lang/testdata/ub/calls/invalid/type-attr-data.ub
data: { core.lookup.it: { type: pick() } }
